plugins {
    id 'java'
    id 'org.springframework.boot' version "${springBootVersion}"
    id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
}

bootJar.enabled = false

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

allprojects {
    group = projectGroup
    version = projectVersion

    repositories {
        mavenCentral()
    }
}

dependencies {
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    dependencies {
        implementation 'com.github.f4b6a3:tsid-creator:5.2.6'
        annotationProcessor 'org.projectlombok:lombok'
        compileOnly 'org.projectlombok:lombok'
        implementation "org.springframework.boot:spring-boot-starter-actuator"
        testImplementation "org.springframework.boot:spring-boot-starter-test"
        testRuntimeOnly "org.junit.platform:junit-platform-launcher"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
